tests/baselines/reference/symbolProperty24.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty24.ts(5,7): error TS2420: Class 'C' incorrectly implements interface 'I'.
  Types of property '[Symbol.toPrimitive]' are incompatible.
    Type '() => 文字' is not assignable to type '() => 真假'.
      Type '文字' is not assignable to type '真假'.


==== tests/cases/conformance/es6/Symbols/symbolProperty24.ts (1 errors) ====
    interface I {
        [Symbol.toPrimitive]: () => boolean;
    }
    
    class C implements I {
          ~
!!! error TS2420: Class 'C' incorrectly implements interface 'I'.
!!! error TS2420:   Types of property '[Symbol.toPrimitive]' are incompatible.
!!! error TS2420:     Type '() => 文字' is not assignable to type '() => 真假'.
!!! error TS2420:       Type '文字' is not assignable to type '真假'.
        [Symbol.toPrimitive]() {
            return "";
        }
    }